# id_copy

./: .gitignore  Cargo.toml  README.md
resources/naps2/lib/: NAPS2.Console.deps.json  NAPS2.Console.runtimeconfig.json  NAPS2.deps.json  NAPS2.runtimeconfig.json
src/: main.rs
