[package]
name = "id_copy"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = "0.14.0"
iced_aw = { version = "0.13.1", features = ["spinner"] }
image = "0.25.10"
include_dir = "0.7.4"
libcaesium = "0.20.3"
log = "0.4.29"
log4rs = "1.4.0"
opener = "0.8.4"
pdfium-render = "0.8.37"
printers = "2.3.0"
serde = "1.0.228"
smartcrop2 = "0.4.0"
strum = { version = "0.28.0", features = ["derive"] }
tempfile = "3.27.0"

[profile.dev.package."*"]
opt-level = 2
